FIX: Secondary logo now visible when it should be

--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -1,27 +1,12 @@
-/* .topnav ul {
-  flex-grow: 2;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  list-style-type: none;
-  color: var(--text-color-light);
-  margin-bottom: 0;
-  margin-left: 0;
-  background-color: var(--color-primary);
-} */
 ul li {
   margin: 2px 16px;
 }
-/* ul a {
-  color: var(--link-color-menu, #fff);
-  text-decoration: none;
-} */
-/* .topnav {
+.topnav {
   position: sticky;
   top: -1px;
   margin-bottom: 2rem;
   z-index: 100;
-} */
+}
 .topnavContainer{  
   padding-top: 2px;
   display: flex;
